Completed HW_Unit_01

--- a/HW_Unit_01.ipynb
+++ b/HW_Unit_01.ipynb
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/datasci-200-Drills/week_01/solutions\n",
+      "/home/jovyan/datasci-200-Drills/week_02\n",
       "I love the command line!\n"
      ]
     }
@@ -137,9 +137,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "429b7390ad3b74b811a7814491f1de555393ad6e Automatic commit by nbgitpuller\n",
+      "a4ab8b7a7c593866b2736535f5716abca09dd654 Automatic commit by nbgitpuller\n",
+      "0477b61850ab09ead8719cc6d1f13d7544956c68 Automatic commit by nbgitpuller\n",
+      "6a0e45e80f58b4d5b820ac5ba9be5fe3e50ff939 Automatic commit by nbgitpuller\n",
+      "09a7cd92d90a1a225b8b1a8cef43093abf4713f5 Automatic commit by nbgitpuller\n",
+      "4606246984c705d9013d2948c394e2037cdd6801 Automatic commit by nbgitpuller\n",
+      "422e82cc0063e11ca8d8d1ba20c0bb08d15911cf Automatic commit by nbgitpuller\n",
+      "aee044ec297c4d998679e84f0d63f99dbde0561c Update Command Line Drill.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "### Q1-2 Grading Tag: Please put your entire solution in this cell. Don't edit this line.\n",
     "\n",
@@ -167,11 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
-    "### Q1-3 Grading Tag: Please put your entire solution in this cell. Don't edit this line.\n"
+    "### Q1-3 Grading Tag: Please put your entire solution in this cell. Don't edit this line.\n",
+    "print(\"Hello World!\")\n"
    ]
   },
   {
@@ -190,9 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93.5 A-\n"
+     ]
+    }
+   ],
    "source": [
     "### Q1-4 Grading Tag: Please put your entire solution in this cell. Don't edit this line.\n",
     "\n",
@@ -265,14 +297,14 @@
     "\n",
     "mumin = Student('Mumin Khan')\n",
     "\n",
-    "mumin.assign_grade('HW_Unit_01', 80)\n",
-    "mumin.assign_grade('HW_Unit_02', 85)\n",
-    "mumin.assign_grade('HW_Unit_03', 75)\n",
-    "mumin.assign_grade('HW_Unit_04', 45)\n",
-    "mumin.assign_grade('HW_Unit_05', 95)\n",
-    "mumin.assign_grade('HW_Unit_06', 90)\n",
-    "mumin.assign_grade('HW_Unit_07', 90)\n",
-    "mumin.assign_grade('HW_Unit_08', 85)\n",
+    "mumin.assign_grade('HW_Unit_01', 95)\n",
+    "mumin.assign_grade('HW_Unit_02', 90)\n",
+    "mumin.assign_grade('HW_Unit_03', 92)\n",
+    "mumin.assign_grade('HW_Unit_04', 88)\n",
+    "mumin.assign_grade('HW_Unit_05', 100)\n",
+    "mumin.assign_grade('HW_Unit_06', 95)\n",
+    "mumin.assign_grade('HW_Unit_07', 98)\n",
+    "mumin.assign_grade('HW_Unit_08', 90)\n",
     "\n",
     "print(mumin.current_grade_percent(), mumin.current_grade_letter())\n"
    ]
