--- a/HW_Unit_02.ipynb
+++ b/HW_Unit_02.ipynb
@@ -266,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The tax owed is: 100.0\n"
+      "The tax owed is: 100.00\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
     "    tax = (1000 * 0.05) + (1000 * 0.1) +  ((income - 2000)  * 0.15)\n",
     "\n",
     "\n",
-    "print(f\"The tax owed is: {tax}\")\n"
+    "print(f\"The tax owed is: {tax:.2f}\")\n"
    ]
   },
   {
