--- a/HW_Unit_03.ipynb
+++ b/HW_Unit_03.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Aulpay', 'Askowskilay']\n"
+      "Aulpay Askowskilay\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
     "\n",
     "modified_str = [(s[1:] + s[0] + 'ay').capitalize() if s else s for s in names]\n",
     "\n",
-    "print(modified_str)\n"
+    "print(\" \".join(modified_str))\n"
    ]
   },
   {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -303,14 +303,14 @@
     "triangle = [[1]]\n",
     "\n",
     "for i in range(1, n):\n",
-    "    new_row = [1] \n",
+    "    new_row = [1]\n",
     "    for j in range(len(triangle[i - 1]) - 1):\n",
     "        new_row.append(triangle[i - 1][j] + triangle[i - 1][j + 1])\n",
-    "    new_row.append(1) \n",
-    "    triangle.append(new_row) \n",
+    "    new_row.append(1)\n",
+    "    triangle.append(new_row)\n",
     "\n",
     "for row in triangle:\n",
-    "    print(\" \" * (n - len(row)), \" \".join(map(str, row)))"
+    "    print(\" \" * (n - len(row)), \" \".join(map(str, row)))  "
    ]
   },
   {
