--- a/HW_Unit_03.ipynb
+++ b/HW_Unit_03.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -289,28 +289,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     1\n",
-      "    1 1\n",
-      "   1 2 1\n",
-      "  1 3 3 1\n",
-      " 1 4 6 4 1\n"
+      "1 9 36 84 126 126 84 36 9 1\n"
      ]
     }
    ],
    "source": [
     "### Q3-4 Grading Tag: Please put your entire solution in this cell. Don't edit this line.\n",
     "n = int(input(\"Enter a row number: \"))\n",
-    "triangle = [[1]]\n",
+    "row = [1]\n",
     "\n",
-    "for i in range(1, n):\n",
+    "for _ in range(n - 1):\n",
     "    new_row = [1]\n",
-    "    for j in range(len(triangle[i - 1]) - 1):\n",
-    "        new_row.append(triangle[i - 1][j] + triangle[i - 1][j + 1])\n",
+    "    for i in range(len(row) - 1):\n",
+    "        new_row.append(row[i] + row[i + 1])\n",
     "    new_row.append(1)\n",
-    "    triangle.append(new_row)\n",
+    "    row = new_row \n",
     "\n",
-    "for row in triangle:\n",
-    "    print(\" \" * (n - len(row)), \" \".join(map(str, row)))  "
+    "print(\" \".join(map(str, row)))  "
    ]
   },
   {
