Updated code for HW_04

--- a/HW_Unit_04.ipynb
+++ b/HW_Unit_04.ipynb
@@ -94,15 +94,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Letters in common: em\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q4-1 Grading Tag:\n",
     "\n",
@@ -120,7 +112,7 @@
     "    print('There are no letters in common')\n",
     "else:\n",
     "    sorted_result = \"\".join(sorted(result))\n",
-    "    print('Letters in common: ' + )\n",
+    "    print('Letters in common: ' + sorted_result)\n",
     "\n",
     "\n"
    ]
@@ -168,21 +160,22 @@
     "\n",
     "# Get the user input for the board size\n",
     "n = int(input(\"Enter a board size: \"))\n",
-    "\n",
     "board = [[0] * n for _ in range(n)]\n",
     "\n",
-    "for i in range(n):\n",
+    "board[0][0] = 1\n",
+    "for j in range(1, n):\n",
+    "    board[0][j] = 0 \n",
+    "\n",
+    "for i in range(1, n): \n",
     "    board[i][0] = 1\n",
     "\n",
     "for i in range(1, n): \n",
-    "    for j in range(1, i + 1):\n",
+    "    for j in range(1, i + 1): \n",
     "        board[i][j] = board[i-1][j] + board[i-1][j-1]\n",
-    "        print(i)\n",
-    "        print(j)\n",
-    "        \n",
+    "\n",
     "for row in board:\n",
     "    print(\" \".join(map(str, row)))\n",
-    "    \n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -288,17 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The square root of 10.0 is: 3.16227766\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q4-4 Grading Tag:\n",
     "from decimal import Decimal, getcontext\n",
@@ -360,17 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 16, 25, 49, 64]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q4-5-1 Grading Tag:\n",
     "print([x**2 for x in range(1, 10) if (x**2) % 3 == 1])\n",
@@ -391,17 +368,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['I', 'l', 'm', 'l', 'a', 'q', 'm', 'a', 'a', 't', 'N', 'e', 'm', 'n', 't', 'm', 'n', 't', 's', 'n', 'm', 't', 'a', 'a', 't', 'b', 'F', 't', 't', 's', 'o', 'l', 'I', 'f']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q4-5-2 Grading Tag:\n",
     "\n",
@@ -430,27 +399,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(3, 4, 5), (5, 12, 13), (6, 8, 10), (8, 15, 17), (9, 12, 15), (12, 16, 20)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q4-5-3 Grading Tag:\n",
-    "pythagorean_triples = [\n",
-    "    (x, y, z)\n",
-    "    for x in range(1, 25)\n",
-    "    for y in range(x, 25)\n",
-    "    for z in range(y, 25)\n",
-    "    if x**2 + y**2 == z**2\n",
-    "]\n",
-    "\n",
+    "pythagorean_triples = [(x, y, z) for x in range(1, 25) for y in range(x, 25) for z in range(y, 25) if x**2 + y**2 == z**2]\n",
     "print(pythagorean_triples)\n"
    ]
   },
@@ -468,17 +422,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['elcomed', 'Wlcomed', 'Wecomed', 'Welomed', 'Welcmed', 'Welcoed', 'Welcomd', 'Welcome']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q4-5-4 Grading Tag:\n",
     "word = \"Welcomed\"\n",
@@ -500,28 +446,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Baoted', 'Beoted', 'Bioted', 'Buoted', 'Boated', 'Boeted', 'Boited', 'Bouted', 'Bootad', 'Bootid', 'Bootod', 'Bootud']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q4-5-5 Grading Tag:\n",
     "word = \"Booted\"\n",
     "vowels = \"aeiou\"\n",
     "\n",
-    "modified_words = [\n",
-    "    word[:i] + v + word[i+1:] \n",
-    "    for i, c in enumerate(word) if c in vowels \n",
-    "    for v in vowels if v != c\n",
-    "]\n",
-    "\n",
+    "modified_words = [ word[:i] + v + word[i+1:] for i, c in enumerate(word) if c in vowels for v in vowels if v != c ]\n",
     "print(modified_words)"
    ]
   },
