--- a/HW_Unit_04.ipynb
+++ b/HW_Unit_04.ipynb
@@ -453,9 +453,7 @@
     "# Q4-5-5 Grading Tag:\n",
     "word = \"Booted\"\n",
     "vowels = \"aeiou\"\n",
-    "\n",
-    "modified_words = [ word[:i] + v + word[i+1:] for i, c in enumerate(word) if c in vowels for v in vowels if v != c ]\n",
-    "print(modified_words)"
+    "modified_words = [ word[:i] + v + word[i+1:] for i, c in enumerate(word) if c in vowels for v in vowels if v != c ]"
    ]
   },
   {
