Fix for HW_Unit_04

--- a/HW_Unit_04.ipynb
+++ b/HW_Unit_04.ipynb
@@ -108,7 +108,7 @@
     "        result.add(char1)\n",
     "\n",
     "\n",
-    "if result == '':\n",
+    "if not result:\n",
     "    print('There are no letters in common')\n",
     "else:\n",
     "    sorted_result = \"\".join(sorted(result))\n",
@@ -453,7 +453,8 @@
     "# Q4-5-5 Grading Tag:\n",
     "word = \"Booted\"\n",
     "vowels = \"aeiou\"\n",
-    "modified_words = [ word[:i] + v + word[i+1:] for i, c in enumerate(word) if c in vowels for v in vowels if v != c ]"
+    "modified_words = [ word[:i] + v + word[i+1:] for i, c in enumerate(word) if c in vowels for v in vowels if v != c ]\n",
+    "print(modified_words)"
    ]
   },
   {
