Fix for first task. HW_07

--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "755b576b",
    "metadata": {},
    "outputs": [],
@@ -138,10 +138,10 @@
     "import random\n",
     "\n",
     "class PlayingCard:\n",
-    "   VALID_RANKS = {\"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"J\", \"Q\", \"K\", \"A\"}\n",
-    "   VALID_SUITS = {\"♠\", \"♥\", \"♦\", \"♣\"}\n",
-    "   \n",
-    "   def __init__(self, rank: str, suit: str):\n",
+    "    VALID_RANKS = [\"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"J\", \"Q\", \"K\", \"A\"]\n",
+    "    VALID_SUITS = [\"♠\", \"♥\", \"♦\", \"♣\"]\n",
+    "\n",
+    "    def __init__(self, rank: str, suit: str):\n",
     "        if rank not in self.VALID_RANKS:\n",
     "            raise TypeError(\"Invalid rank!\")\n",
     "        if suit not in self.VALID_SUITS:\n",
@@ -149,6 +149,12 @@
     "        \n",
     "        self.rank = rank\n",
     "        self.suit = suit\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.rank} of {self.suit}\"\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.rank} of {self.suit}\"\n",
     "\n",
     "\n",
     "class Deck:\n",
