--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -261,7 +261,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q7-2 Grading Tag:\n"
+    "# Q7-2 Grading Tag:\n",
+    "class MarblesBoard:\n",
+    "    def __init__(self, marbles):\n",
+    "        self.marbles = list(marbles)\n",
+    "    \n",
+    "    def switch(self):\n",
+    "        \"\"\"Switches the first two marbles.\"\"\"\n",
+    "        self.marbles[0], self.marbles[1] = self.marbles[1], self.marbles[0]\n",
+    "    \n",
+    "    def rotate(self):\n",
+    "        \"\"\"Moves the first marble to the last position, shifting others left.\"\"\"\n",
+    "        first = self.marbles.pop(0)\n",
+    "        self.marbles.append(first)\n",
+    "    \n",
+    "    def is_solved(self):\n",
+    "        \"\"\"Checks if the marbles are in order from 0 to N-1.\"\"\"\n",
+    "        return self.marbles == sorted(self.marbles)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \" \".join(map(str, self.marbles))\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return self.__str__()\n",
+    "\n",
+    "\n",
+    "class Solver:\n",
+    "    def __init__(self, board):\n",
+    "        self.board = board\n",
+    "    \n",
+    "    def solve(self):\n",
+    "        \"\"\"Solves the marbles board using a rotation-based approach.\"\"\"\n",
+    "        moves = [('start', str(self.board))]\n",
+    "        \n",
+    "        while not self.board.is_solved():\n",
+    "            if self.board.marbles[0] != min(self.board.marbles):\n",
+    "                self.board.switch()\n",
+    "                moves.append(('switch', str(self.board)))\n",
+    "            else:\n",
+    "                self.board.rotate()\n",
+    "                moves.append(('rotate', str(self.board)))\n",
+    "        \n",
+    "        return moves\n"
    ]
   }
  ],
