--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "755b576b",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,6 @@
     "            raise TypeError(\"Invalid rank!\")\n",
     "        if suit not in self.VALID_SUITS:\n",
     "            raise TypeError(\"Invalid suit!\")\n",
-    "        \n",
     "        self.rank = rank\n",
     "        self.suit = suit\n",
     "\n",
@@ -176,16 +175,7 @@
     "            return f\"Cannot deal {card_count} cards. The deck only has {len(self.cards)} cards left!\"\n",
     "        dealt_cards = self.cards[:card_count]\n",
     "        self.cards = self.cards[card_count:]\n",
-    "        return dealt_cards\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "            \n",
-    "\n",
-    "        \n",
-    "\n"
+    "        return dealt_cards\n"
    ]
   },
   {
@@ -256,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1c9ee04d",
    "metadata": {},
    "outputs": [],
@@ -285,7 +275,6 @@
     "    def __repr__(self):\n",
     "        return self.__str__()\n",
     "\n",
-    "\n",
     "class Solver:\n",
     "    def __init__(self, board):\n",
     "        self.board = board\n",
@@ -301,8 +290,7 @@
     "            else:\n",
     "                self.board.rotate()\n",
     "                moves.append(('rotate', str(self.board)))\n",
-    "\n",
-    "        return moves\n"
+    "        return moves"
    ]
   }
  ],
