--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "755b576b",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
     "            return f\"Cannot deal {card_count} cards. The deck only has {len(self.cards)} cards left!\"\n",
     "        dealt_cards = self.cards[:card_count]\n",
     "        self.cards = self.cards[card_count:]\n",
-    "        return dealt_cards\n"
+    "        return dealt_cards"
    ]
   },
   {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1c9ee04d",
    "metadata": {},
    "outputs": [],
@@ -275,6 +275,7 @@
     "    def __repr__(self):\n",
     "        return self.__str__()\n",
     "\n",
+    "\n",
     "class Solver:\n",
     "    def __init__(self, board):\n",
     "        self.board = board\n",
@@ -290,7 +291,8 @@
     "            else:\n",
     "                self.board.rotate()\n",
     "                moves.append(('rotate', str(self.board)))\n",
-    "        return moves"
+    "\n",
+    "        return moves\n"
    ]
   }
  ],
