--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -255,23 +255,23 @@
     "class MarblesBoard:\n",
     "    def __init__(self, marbles):\n",
     "        self.marbles = list(marbles)\n",
-    "\n",
+    "    \n",
     "    def switch(self):\n",
     "        \"\"\"Switches the first two marbles.\"\"\"\n",
     "        self.marbles[0], self.marbles[1] = self.marbles[1], self.marbles[0]\n",
-    "\n",
+    "    \n",
     "    def rotate(self):\n",
     "        \"\"\"Moves the first marble to the last position, shifting others left.\"\"\"\n",
     "        first = self.marbles.pop(0)\n",
     "        self.marbles.append(first)\n",
-    "\n",
+    "    \n",
     "    def is_solved(self):\n",
     "        \"\"\"Checks if the marbles are in order from 0 to N-1.\"\"\"\n",
     "        return self.marbles == sorted(self.marbles)\n",
-    "\n",
+    "    \n",
     "    def __str__(self):\n",
     "        return \" \".join(map(str, self.marbles))\n",
-    "\n",
+    "    \n",
     "    def __repr__(self):\n",
     "        return self.__str__()\n",
     "\n",
@@ -279,20 +279,26 @@
     "class Solver:\n",
     "    def __init__(self, board):\n",
     "        self.board = board\n",
-    "\n",
+    "    \n",
     "    def solve(self):\n",
-    "        \"\"\"Solves the marbles board using a rotation-based approach.\"\"\"\n",
+    "        \"\"\"Solves the marbles board using an optimized bubble-sort approach.\"\"\"\n",
     "        moves = [('start', str(self.board))]\n",
-    "\n",
+    "        visited_states = set()\n",
+    "        \n",
     "        while not self.board.is_solved():\n",
-    "            if self.board.marbles[0] != min(self.board.marbles):\n",
+    "            current_state = tuple(self.board.marbles)\n",
+    "            if current_state in visited_states:\n",
+    "                break  # Prevent infinite loops\n",
+    "            visited_states.add(current_state)\n",
+    "            \n",
+    "            if self.board.marbles[0] > self.board.marbles[1]:\n",
     "                self.board.switch()\n",
     "                moves.append(('switch', str(self.board)))\n",
     "            else:\n",
     "                self.board.rotate()\n",
     "                moves.append(('rotate', str(self.board)))\n",
-    "\n",
-    "        return moves\n"
+    "        \n",
+    "        return moves"
    ]
   }
  ],
