--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -281,9 +281,10 @@
     "        self.board = board\n",
     "    \n",
     "    def solve(self):\n",
-    "        \"\"\"Solves the marbles board using an optimized bubble-sort approach.\"\"\"\n",
+    "        \"\"\"Solves the marbles board using an optimized sorting approach.\"\"\"\n",
     "        moves = [('start', str(self.board))]\n",
     "        visited_states = set()\n",
+    "        n = len(self.board.marbles)\n",
     "        \n",
     "        while not self.board.is_solved():\n",
     "            current_state = tuple(self.board.marbles)\n",
@@ -291,13 +292,18 @@
     "                break  # Prevent infinite loops\n",
     "            visited_states.add(current_state)\n",
     "            \n",
+    "            # Move smallest misplaced element to the front\n",
+    "            min_index = self.board.marbles.index(min(self.board.marbles))\n",
+    "            while min_index > 0:\n",
+    "                self.board.rotate()\n",
+    "                moves.append(('rotate', str(self.board)))\n",
+    "                min_index -= 1\n",
+    "            \n",
+    "            # Swap first two if needed\n",
     "            if self.board.marbles[0] > self.board.marbles[1]:\n",
     "                self.board.switch()\n",
     "                moves.append(('switch', str(self.board)))\n",
-    "            else:\n",
-    "                self.board.rotate()\n",
-    "                moves.append(('rotate', str(self.board)))\n",
-    "        \n",
+    "            \n",
     "        return moves"
    ]
   }
