--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -292,18 +292,19 @@
     "                break  # Prevent infinite loops\n",
     "            visited_states.add(current_state)\n",
     "            \n",
-    "            # Move smallest misplaced element to the front\n",
-    "            min_index = self.board.marbles.index(min(self.board.marbles))\n",
-    "            while min_index > 0:\n",
+    "            # Perform a sorting pass using switch and rotate\n",
+    "            sorted_flag = True\n",
+    "            for i in range(n - 1):\n",
+    "                if self.board.marbles[0] > self.board.marbles[1]:\n",
+    "                    self.board.switch()\n",
+    "                    moves.append(('switch', str(self.board)))\n",
+    "                    sorted_flag = False\n",
     "                self.board.rotate()\n",
     "                moves.append(('rotate', str(self.board)))\n",
-    "                min_index -= 1\n",
-    "            \n",
-    "            # Swap first two if needed\n",
-    "            if self.board.marbles[0] > self.board.marbles[1]:\n",
-    "                self.board.switch()\n",
-    "                moves.append(('switch', str(self.board)))\n",
-    "            \n",
+    "                \n",
+    "            if sorted_flag:\n",
+    "                break  # If no swaps occurred, the list is sorted\n",
+    "        \n",
     "        return moves"
    ]
   }
