--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -292,18 +292,15 @@
     "                break  # Prevent infinite loops\n",
     "            visited_states.add(current_state)\n",
     "            \n",
-    "            # Perform a sorting pass using switch and rotate\n",
-    "            sorted_flag = True\n",
-    "            for i in range(n - 1):\n",
-    "                if self.board.marbles[0] > self.board.marbles[1]:\n",
-    "                    self.board.switch()\n",
-    "                    moves.append(('switch', str(self.board)))\n",
-    "                    sorted_flag = False\n",
+    "            # Find the correct index where marble 0 should be\n",
+    "            while self.board.marbles[0] != min(self.board.marbles):\n",
     "                self.board.rotate()\n",
     "                moves.append(('rotate', str(self.board)))\n",
-    "                \n",
-    "            if sorted_flag:\n",
-    "                break  # If no swaps occurred, the list is sorted\n",
+    "            \n",
+    "            # Swap if necessary\n",
+    "            if self.board.marbles[0] > self.board.marbles[1]:\n",
+    "                self.board.switch()\n",
+    "                moves.append(('switch', str(self.board)))\n",
     "        \n",
     "        return moves"
    ]
