--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -286,21 +286,22 @@
     "        visited_states = set()\n",
     "        n = len(self.board.marbles)\n",
     "        \n",
-    "        while not self.board.is_solved():\n",
-    "            current_state = tuple(self.board.marbles)\n",
-    "            if current_state in visited_states:\n",
-    "                break  # Prevent infinite loops\n",
-    "            visited_states.add(current_state)\n",
-    "            \n",
-    "            # Find the correct index where marble 0 should be\n",
-    "            while self.board.marbles[0] != min(self.board.marbles):\n",
-    "                self.board.rotate()\n",
-    "                moves.append(('rotate', str(self.board)))\n",
-    "            \n",
-    "            # Swap if necessary\n",
-    "            if self.board.marbles[0] > self.board.marbles[1]:\n",
-    "                self.board.switch()\n",
-    "                moves.append(('switch', str(self.board)))\n",
+    "        for target in range(n):  # Ensure each number moves to its correct position\n",
+    "            while self.board.marbles[target] != target:\n",
+    "                current_state = tuple(self.board.marbles)\n",
+    "                if current_state in visited_states:\n",
+    "                    break  # Prevent infinite loops\n",
+    "                visited_states.add(current_state)\n",
+    "                \n",
+    "                # Rotate until target number is at index 0\n",
+    "                while self.board.marbles[0] != target:\n",
+    "                    self.board.rotate()\n",
+    "                    moves.append(('rotate', str(self.board)))\n",
+    "                \n",
+    "                # If needed, switch to move it forward\n",
+    "                if self.board.marbles[0] > self.board.marbles[1]:\n",
+    "                    self.board.switch()\n",
+    "                    moves.append(('switch', str(self.board)))\n",
     "        \n",
     "        return moves"
    ]
