--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -253,6 +253,7 @@
    "source": [
     "# Q7-2 Grading Tag:\n",
     "class MarblesBoard:\n",
+    "class MarblesBoard:\n",
     "    def __init__(self, marbles):\n",
     "        self.marbles = list(marbles)\n",
     "    \n",
@@ -281,28 +282,25 @@
     "        self.board = board\n",
     "    \n",
     "    def solve(self):\n",
-    "        \"\"\"Solves the marbles board using an optimized sorting approach.\"\"\"\n",
+    "        \"\"\"Solves the marbles board using a Bubble Sort-like approach.\"\"\"\n",
     "        moves = [('start', str(self.board))]\n",
     "        visited_states = set()\n",
     "        n = len(self.board.marbles)\n",
     "        \n",
-    "        for target in range(n):  # Ensure each number moves to its correct position\n",
-    "            while self.board.marbles[target] != target:\n",
-    "                current_state = tuple(self.board.marbles)\n",
-    "                if current_state in visited_states:\n",
-    "                    break  # Prevent infinite loops\n",
-    "                visited_states.add(current_state)\n",
-    "                \n",
-    "                # Rotate until target number is at index 0\n",
-    "                while self.board.marbles[0] != target:\n",
-    "                    self.board.rotate()\n",
-    "                    moves.append(('rotate', str(self.board)))\n",
-    "                \n",
-    "                # If needed, switch to move it forward\n",
+    "        while not self.board.is_solved():\n",
+    "            current_state = tuple(self.board.marbles)\n",
+    "            if current_state in visited_states:\n",
+    "                break  # Prevent infinite loops\n",
+    "            visited_states.add(current_state)\n",
+    "            \n",
+    "            # Perform a Bubble Sort pass to push larger numbers to the right\n",
+    "            for i in range(n - 1):\n",
     "                if self.board.marbles[0] > self.board.marbles[1]:\n",
     "                    self.board.switch()\n",
     "                    moves.append(('switch', str(self.board)))\n",
-    "        \n",
+    "                self.board.rotate()\n",
+    "                moves.append(('rotate', str(self.board)))\n",
+    "            \n",
     "        return moves"
    ]
   }
