--- a/HW_Unit_07.ipynb
+++ b/HW_Unit_07.ipynb
@@ -281,7 +281,7 @@
     "        self.board = board\n",
     "    \n",
     "    def solve(self):\n",
-    "        \"\"\"Solves the marbles board using a Bubble Sort-like approach.\"\"\"\n",
+    "        \"\"\"Solves the marbles board using a Bubble Sort-inspired approach.\"\"\"\n",
     "        moves = [('start', str(self.board))]\n",
     "        visited_states = set()\n",
     "        n = len(self.board.marbles)\n",
@@ -292,14 +292,17 @@
     "                break  # Prevent infinite loops\n",
     "            visited_states.add(current_state)\n",
     "            \n",
-    "            # Perform a Bubble Sort pass to push larger numbers to the right\n",
-    "            for i in range(n - 1):\n",
-    "                if self.board.marbles[0] > self.board.marbles[1]:\n",
+    "            for target in range(n):\n",
+    "                # Rotate until the correct number is at index 0\n",
+    "                while self.board.marbles[0] != target:\n",
+    "                    self.board.rotate()\n",
+    "                    moves.append(('rotate', str(self.board)))\n",
+    "                    \n",
+    "                # If the first two elements are out of order, switch them\n",
+    "                if target < n - 1 and self.board.marbles[0] > self.board.marbles[1]:\n",
     "                    self.board.switch()\n",
     "                    moves.append(('switch', str(self.board)))\n",
-    "                self.board.rotate()\n",
-    "                moves.append(('rotate', str(self.board)))\n",
-    "            \n",
+    "        \n",
     "        return moves"
    ]
   }
