Fix for retweet.

--- a/DATSCI200 Midterm Exam Pt2.ipynb
+++ b/DATSCI200 Midterm Exam Pt2.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,19 +71,27 @@
     "    username_counts = Counter()\n",
     "\n",
     "    for tweet in tweet_list:\n",
-    "        words = tweet.split()  # Split by spaces\n",
-    "        for word in words:\n",
-    "            if word.startswith('@') and 1 < len(word) <= 14:  # Ensure @ and valid length\n",
-    "                username_counts[word] += 1  # Count occurrences\n",
+    "        match = re.match(r'^RT @(\\w{1,14})', tweet)  # Ensure retweet format\n",
+    "        if match:\n",
+    "            username = match.group(1)\n",
+    "            username_counts[username] += 1  # Count only valid retweets\n",
     "\n",
-    "    return dict(username_counts)"
+    "    return dict(username_counts)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sportball': 1, 'ladodgers': 1, 'dubsfan': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "# allow this code to work by implementing count_retweets_by_username function above\n",
     "print(count_retweets_by_username(tweets))"
