--- a/HW_Unit_09.ipynb
+++ b/HW_Unit_09.ipynb
@@ -427,21 +427,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "120012cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Q9-6 Grading Tag:\n",
     "def feat_maximum(ar, feat_num):\n",
-    "    max_value = np.max(ar[:, feat_num])  # Get the maximum value in the specified column\n",
-    "    row_indexes = np.where(ar[:, feat_num] == max_value)[0]  # Find the row indexes where it appears\n",
-    "    return row_indexes"
+    "   max_value = np.max(ar[:, feat_num])  # Find the max value in the specified column\n",
+    "   row_indexes = np.where(ar[:, feat_num] == max_value)[0]  # Find row indices where max value occurs\n",
+    "   return row_indexes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "id": "e6caaff3",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "array([ 14,  94, 120, 161, 168, 483, 634, 650, 662, 699, 938, 997])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
