--- a/HW_Unit_09.ipynb
+++ b/HW_Unit_09.ipynb
@@ -345,9 +345,14 @@
    "source": [
     "# Q9-5 Grading Tag:\n",
     "def feat_minimum(ar):\n",
-    "   min_value = np.min(ar, axis=0)  # Get the minimum value for each column\n",
-    "   row_indexes = np.where((ar == min_value).any(axis=1))[0]  # Find rows with at least one minimum value\n",
-    "   return np.sort(row_indexes)  # Ensure sorted order to match expected output"
+    "   # Get the minimum value for each column\n",
+    "    min_values = np.min(ar, axis=0)\n",
+    "    \n",
+    "    # Find rows where **any** column matches its column's minimum value\n",
+    "    row_indexes = np.where(np.any(ar == min_values, axis=1))[0]\n",
+    "\n",
+    "    # Sort indices to ensure correct order\n",
+    "    return np.sort(row_indexes)"
    ]
   },
   {
