--- a/HW_Unit_09.ipynb
+++ b/HW_Unit_09.ipynb
@@ -345,13 +345,11 @@
    "source": [
     "# Q9-5 Grading Tag:\n",
     "def feat_minimum(ar):\n",
-    "   # Get the minimum value for each column\n",
-    "    min_values = np.min(ar, axis=0)\n",
+    "    min_values = np.min(ar, axis=0)  \n",
     "    \n",
-    "    # Find rows where **any** column matches its column's minimum value\n",
-    "    row_indexes = np.where(np.any(ar == min_values, axis=1))[0]\n",
-    "\n",
-    "    # Sort indices to ensure correct order\n",
+    "    row_mask = np.isin(ar, min_values)  \n",
+    "    row_indexes = np.where(row_mask.any(axis=1))[0] \n",
+    "   \n",
     "    return np.sort(row_indexes)"
    ]
   },
