--- a/HW_Unit_09.ipynb
+++ b/HW_Unit_09.ipynb
@@ -346,10 +346,8 @@
     "# Q9-5 Grading Tag:\n",
     "def feat_minimum(ar):\n",
     "    min_values = np.min(ar, axis=0)  \n",
-    "    \n",
-    "    row_mask = np.isin(ar, min_values)  \n",
-    "    row_indexes = np.where(row_mask.any(axis=1))[0] \n",
-    "   \n",
+    "    row_mask = (ar == min_values)\n",
+    "    row_indexes = np.where(row_mask.any(axis=1))[0]\n",
     "    return np.sort(row_indexes)"
    ]
   },
