--- a/HW_Unit_09.ipynb
+++ b/HW_Unit_09.ipynb
@@ -345,15 +345,14 @@
    "source": [
     "# Q9-5 Grading Tag:\n",
     "def feat_minimum(ar):\n",
-    "    min_values = np.min(ar, axis=0)  \n",
-    "    row_mask = (ar == min_values)\n",
-    "    row_indexes = np.where(row_mask.any(axis=1))[0]\n",
-    "    return np.sort(row_indexes)"
+    "    min_value = np.min(ar) \n",
+    "    row_indices = np.unique(np.where(ar == min_value)[0])\n",
+    "    return row_indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "id": "dd0c0ff1",
    "metadata": {},
    "outputs": [
@@ -370,7 +369,7 @@
        "       963, 971, 987, 990, 992, 993])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
