--- a/HW_Unit_09.ipynb
+++ b/HW_Unit_09.ipynb
@@ -346,8 +346,8 @@
     "# Q9-5 Grading Tag:\n",
     "def feat_minimum(ar):\n",
     "    min_value = np.min(ar) \n",
-    "    row_indices = np.unique(np.where(ar == min_value)[0])\n",
-    "    return row_indices"
+    "    row_indices = np.where(ar == min_value)[0] \n",
+    "    return np.array(row_indices) "
    ]
   },
   {
